root path redirect to docs endpoint, minor changes
