# models/heroeModel.go
@@ -10,7 +10,6 @@ import (
 	"github.com/go-playground/validator/v10"
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/bson/primitive"
-	"go.mongodb.org/mongo-driver/mongo/options"
 )
 
 type HeroeModel struct {
@@ -20,7 +19,7 @@ type HeroeModel struct {
 	Nombre      *string            `bson:"nombre,omitempty"       form:"nombre"      validate:"required,regexp=^[A-Za-zÀ-ÿ][A-Za-zÀ-ÿ ]*$"`
 	Clase       *string            `bson:"clase,omitempty"        form:"clase"       validate:"required,alpha,oneof=Guerrero Mago Pícaro"`
 	Tipo        *string            `bson:"tipo,omitempty"         form:"tipo"        validate:"required,alpha,oneof=Tanque Armas Fuego Hielo Veneno Machete"`
-	Coleccion   *string            `bson:"coleccion,omitempty"                       validate:"required,alpha,oneof=Heroes Armas Armaduras Items Épicas"`
+	Coleccion   *string            `bson:"coleccion,omitempty"                       validate:"required,alpha,oneof=Heroes Armas Armaduras Items Epicas"`
 	Poder       *int               `bson:"poder,omitempty"        form:"poder"       validate:"required,gt=0"`
 	Vida        *int               `bson:"vida,omitempty"         form:"vida"        validate:"required,gt=0"`
 	Defensa     *int               `bson:"defensa,omitempty"      form:"defensa"     validate:"required,gt=0"`
@@ -47,19 +46,6 @@ func (h *HeroeModel) Validate(validateNotNulls bool) error {
 	return nil
 }
 
-func (HeroeModel) GetObjectList(query PaginationModel, heroeList *[]HeroeModel) error {
-	filter := bson.M{"coleccion": "Heroes"}
-	if *query.StatusFilter {
-		filter["estado"] = query.StatusFilter
-	}
-	return getHeroeListRaw(filter, query, heroeList)
-}
-
-func (HeroeModel) GetObjectListByName(query PaginationModel, keyword string, heroeList *[]HeroeModel) error {
-	filter := bson.M{"nombre": bson.M{"$regex": keyword, "$options": "i"}, "estado": true, "coleccion": "Heroes"}
-	return getHeroeListRaw(filter, query, heroeList)
-}
-
 func (h HeroeModel) PostObject() error {
 	db := database.GetMongoClient()
 	col := db.Database(os.Getenv("MONGO_DB")).Collection("cartas")
@@ -82,28 +68,6 @@ func (h *HeroeModel) UpdateObject() error {
 	}
 	if h.Imagen != nil {
 		go utils.DeleteImageHandler(updated_heroe.Imagen)
-	}
-	return nil
-}
-
-// [Funciones Raw]
-func getHeroeListRaw(filter interface{}, query PaginationModel, heroeList *[]HeroeModel) error {
-	db := database.GetMongoClient()
-	col := db.Database(os.Getenv("MONGO_DB")).Collection("cartas")
-	ctx, cancel := context.WithTimeout(context.Background(), time.Second*10)
-	defer cancel()
-	response, err := col.Find(ctx, filter, options.Find().SetSkip((int64(query.Page-1) * int64(query.Size))).SetLimit(int64(query.Size)))
-	if err != nil {
-		return err
-	}
-	defer response.Close(ctx)
-	*heroeList = []HeroeModel{}
-	for response.Next(ctx) {
-		var element HeroeModel
-		if err := response.Decode(&element); err != nil {
-			return err
-		}
-		*heroeList = append(*heroeList, element)
 	}
 	return nil
 }
