# models/paginationModel.go
@@ -3,11 +3,11 @@ package models
 import "github.com/go-playground/validator/v10"
 
 type PaginationModel struct {
-	Size         int    `query:"size"         validate:"required,gt=0"`
-	Page         int    `query:"page"         validate:"required,gt=0"`
-	Coleccion    string `query:"coleccion"    validate:"required,alpha,oneof=Heroes Armas Armaduras Items Épicas"`
-	Keyword      string `query:"keyword"`
-	StatusFilter *bool  `query:"statusFilter" validate:"required"`
+	Size        int    `query:"size"         validate:"required,gt=0"`
+	Page        int    `query:"page"         validate:"required,gt=0"`
+	Coleccion   string `query:"coleccion"    validate:"required,oneof=All Heroes Armas Armaduras Items Epicas"`
+	Keyword     string `query:"keyword"`
+	OnlyActives *bool  `query:"onlyActives" validate:"required"`
 }
 
 func (p PaginationModel) Validate() error {
